python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.4.0	[??? ??, 2009]

Enhancements:
	Added A* search algorithm (as heuristic_search);
	Added Chow's and Euclidean heuristics for A*;
	Moved to setuptools.

Fixes:
	Breadth first search was omitting the first node in level ordering when no root was specified.


Release 1.3.1	[Oct 27, 2008]

Fixes:
	Graph and digraph inverse was not working;
	Node removal in digraphs was not deleting all relevant edges (Issue 13).

Important API Changes:
	Deprecated methods were removed.


Release 1.3.0	[Sep 28, 2008]

Enhancements:
	Tree traversals (preorder and postorder).

Fixes:
	Node insertion is much faster now (Issue 11).
	Hypernode/hyperedge insertion also much faster.

Important API Changes:
	get_nodes() is now nodes();
	get_edges() is now edges();
	get_neighbors() is now neighbors();
	get_incidents() is now incidents();
	get_order() is now order();
	get_degree() is now degree().
	(Former method names are deprecated and will be removed in the next release.)


Release 1.2.0	[Sep 09, 2008]

Enhancements:
	Moved to new class style;
	Graphs and digraphs are separated classes now;
	Added level-based ordering to breadth first search;
	Graph object is now iterable;
	Graph object is now a container and graphobj[nodeid] iterates too;
	Support for node and edge attributes (Issue 5);
	Node deletion.
	
Fixes:
	Install now works with a prefix (Issue 10);
	Shortest path spanning trees did not had an explicit root.

Important API Changes:
	breadth_first_search() now returns a tuple;
	Arrow methods are gone. Use class digraph + edge methods for directed graphs now.


Release 1.1.1	[Sep 04, 2008]

Enhancements:
	Improved install script.
	
Fixes:
	DOT Language output now works for nodes/edges labelled with spaces.
	
Important API Changes:
	get_neighbours() is now get_neighbors() (Issue 9).


Release 1.1.0	[Aug 31, 2008]

Enhancements: